# hire-hire

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: lint.yml  pr_closed.yml
QA/test_plan/: README.md
frontend/: index.html  popups.js  validation.js
frontend/pages/: challenge.html  challenge.js  duel-results.html  duel-settings.html  duel-settings.js  duel.html  index.css  interviews.html  profile.html  programming.html  team.html  test-finished.html  test-settings.html
hire_hire/: .flake8  conftest.py  manage.py
hire_hire/add_question/: admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
hire_hire/addquestion/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hire_hire/api/: logging_middleware.py  serializers.py  urls.py  views.py
hire_hire/api_add_question/: apps.py  serializers.py  urls.py  validators.py  views.py
hire_hire/api_contributors/: __init__.py  apps.py  schema.py  serializers.py  urls.py  views.py
hire_hire/api_donation/: __init__.py  admin.py  apps.py  exceptions.py  models.py  payment.py  schema.py  serializers.py  services.py  urls.py  views.py
hire_hire/api_duel/: __init__.py  apps.py  exceptions.py  schema.py  serializers.py  services.py  urls.py  views.py
hire_hire/api_interview/: __init__.py  apps.py  schema.py  serializers.py  services.py  urls.py  views.py
hire_hire/api_users/: apps.py  serializers.py
hire_hire/contributors/: __init__.py  apps.py  managers.py  schema.py  serializers.py  urls.py  views.py
hire_hire/duel/: __init__.py  apps.py  exceptions.py  forms.py  managers.py  mixins.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  views.py
hire_hire/hire_hire/: __init__.py  asgi.py  jinja2.py  schema.py  schema_settings.py  settings.py  urls.py  wsgi.py
(+381 files in other folders)
