[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "hire-hire"
version = "0.1.0"
description = ""
authors = ["ProninTeam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2a1"
python-dotenv = "^0.21.1"
jinja2 = "^3.1.2"
sorl-thumbnail = "^12.9.0"
pillow = "^9.4.0"
django-cleanup = "^7.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
django-debug-toolbar = "^3.8.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
