[tool.black]
line-length = 79
skip-string-normalization = true

[tool.poetry]
name = "hire-hire"
version = "0.1.0"
description = ""
authors = ["ProninTeam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2a1"
django-cleanup = "^7.0.0"
jinja2 = "^3.1.2"
pillow = "^9.4.0"
python-dotenv = "^0.21.1"
sorl-thumbnail = "^12.9.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
djoser = "^2.1.0"
drf-yasg = "^1.21.5"
drf-spectacular = "^0.26.2"
django-cors-headers = "^3.14.0"
pytest = "7.3.1"
pytest-django = "4.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
django-debug-toolbar = "^3.8.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
